# hl_mai_lab_01_vp

./: CMakeLists.txt  README.md  docker-compose.yml  index.yaml  main_cart.cpp  main_good.cpp  main_user.cpp  start.sh
config/: config.cpp
database/: cart.cpp  cart.h  database.cpp  database.h  good.cpp  good.h  user.cpp  user.h
my_service/: Dockerfile
mydata/: .env  label_studio.sqlite3
mydata/export/: project-1-at-2023-12-10-19-47-6f33800c-info.json  project-1-at-2023-12-10-19-47-6f33800c.json  project-1-at-2023-12-11-16-55-a630b345-info.json  project-1-at-2023-12-11-16-55-a630b345.json  project-1-at-2023-12-11-16-57-a2cbb224-info.json  project-1-at-2023-12-11-17-01-a2cbb224-info.json  project-1-at-2023-12-11-17-01-a2cbb224.json  project-1-at-2023-12-11-17-02-a2cbb224-info.json  project-1-at-2023-12-11-17-19-1d8a2194-info.json  project-1-at-2023-12-11-17-19-1d8a2194.json  project-1-at-2023-12-11-19-17-e9e7706e-info.json  project-1-at-2023-12-11-19-17-e9e7706e.json  project-1-at-2023-12-12-18-05-cc80338d-info.json  project-1-at-2023-12-12-18-06-cc80338d-info.json  project-1-at-2023-12-12-18-07-cc80338d-info.json  project-1-at-2023-12-12-18-09-cc80338d-info.json  project-1-at-2023-12-12-18-18-67238960-info.json  project-1-at-2023-12-12-18-18-67238960.json  project-1-at-2023-12-12-18-31-25d72a32-info.json  project-1-at-2023-12-12-18-31-25d72a32.json  project-1-at-2023-12-12-19-45-a45c82ab-info.json  project-1-at-2023-12-12-19-45-a45c82ab.json  project-1-at-2023-12-15-14-31-ee758980-info.json  project-1-at-2023-12-15-14-31-ee758980.json
mydata/media/upload/1/: 0a2bf3b2-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  1319a94d-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  16e5ff54-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  205cbc7e-test1212JsonLS.json  230a3694-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  233ba7ff-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  296d4d92-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  2dda9567-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  344f2f10-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  662e7a2d-test1212JsonLS.json  6ff8ddd6-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  6ffe7254-test.json  711fcb1c-test1212JsonLS.json  775b6afd-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  778dc5a2-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  7cf1594a-test1212JsonLS.json  7d270522-test1212JsonLS.json  8237fe50-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  85de044a-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  8f26f167-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  93816a02-output_file.json  970437ac-test1212JsonLS.json  998123c4-project-1-at-2023-12-11-16-57-a2cbb224.json  9f364cff-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  9f821aea-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  9ffe2427-test1212JsonLS.json  a8f0a74e-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  afa3d72b-project-1-at-2023-12-11-17-02-a2cbb224111_-_Copy.json  b653b653-project-1-at-2023-12-11-17-02-a2cbb224111.json  badb9762-test1212JsonLS.json  c3827710-test1212JsonLS.json  (+13 more)
mysql/: Dockerfile
other_server/: Dockerfile
service_cart/: Dockerfile
service_good/: Dockerfile
service_user/: Dockerfile
web_server/: http_request_factory.h  http_web_server.h
web_server/handlers/: cart_handler.h  good_handler.h  user_handler.h
web_server_cart/: http_request_factory.h  http_web_server.h
web_server_cart/handlers/: handler.h
web_server_good/: http_request_factory.h  http_web_server.h
web_server_good/handlers/: handler.h
web_server_user/: http_request_factory.h
web_server_user/handlers/: handler.h
